New-Upload-1755854042013/objects/TC_Metadata_Logs__c.object
<CustomObject>
    <fields>
        <fullName>Async_Id__c</fullName>
        <label>Async Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Developer_Org__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Developer Org</label>
        <referenceTo>Developer_Org__c</referenceTo>
        <relationshipLabel>TC Metadata Logs</relationshipLabel>
        <relationshipName>TC_Metadata_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>File_Id__c</fullName>
        <label>File Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Completed</label>
        <type>Checkbox</type>
    </fields>
    <label>TC Metadata Logs</label>
    <nameField>
        <label>Metadata Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TC Metadata Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>